// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    data-gdtype="copybutton"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,175,255,1.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "display": "flex",
        "justifyContent": "center",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "44px",
        "minWidth": "64px",
        "msFlexAlign": "stretch",
        "msFlexPack": "center",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "cursor": "pointer",
          "msTouchAction": "manipulation",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "touchAction": "manipulation",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "letterSpacing": "0px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
          }
        }
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz"
          dir="auto"
          style={
            Object {
              "color": "rgba(255,255,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "letterSpacing": "1px",
              "marginBottom": "9px",
              "marginLeft": "16px",
              "marginRight": "16px",
              "marginTop": "9px",
              "textAlign": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxPack": "center",
                  "WebkitJustifyContent": "center",
                  "alignItems": "center",
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "justifyContent": "center",
                  "letterSpacing": "0px",
                  "lineHeight": "22px",
                  "msFlexAlign": "center",
                  "msFlexPack": "center",
                  "paddingTop": "1px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "uppercase",
                }
              }
            >
              Copy to Clipboard
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CopyButton matches snapshot 2`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    data-gdtype="copybutton"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,0,0,0.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "display": "flex",
        "justifyContent": "center",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "44px",
        "minWidth": "64px",
        "msFlexAlign": "stretch",
        "msFlexPack": "center",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "cursor": "pointer",
          "msTouchAction": "manipulation",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "touchAction": "manipulation",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "letterSpacing": "0px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
          }
        }
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,175,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "letterSpacing": "1px",
              "marginBottom": "9px",
              "marginLeft": "16px",
              "marginRight": "16px",
              "marginTop": "9px",
              "textAlign": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxPack": "center",
                  "WebkitJustifyContent": "center",
                  "alignItems": "center",
                  "color": "rgba(0,175,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "justifyContent": "center",
                  "letterSpacing": "0px",
                  "lineHeight": "22px",
                  "msFlexAlign": "center",
                  "msFlexPack": "center",
                  "paddingTop": "1px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "uppercase",
                }
              }
            >
              Title in CopyButton
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
